--- a/Doc/man/man3/D__Cloud Folder_NextCloud_My Programs_dotNet_Open Source_SlimeMarkUp_SlimeMarkUp.Core_Extensions_SlimeMarkup_.3
+++ b/Doc/man/man3/D__Cloud Folder_NextCloud_My Programs_dotNet_Open Source_SlimeMarkUp_SlimeMarkUp.Core_Extensions_SlimeMarkup_.3
@@ -25,6 +25,9 @@ SlimeMarkUp.Core/Extensions/SlimeMarkup Directory Reference
 .RI "file \fBHorizontalRuleExtension\&.cs\fP"
 .br
 .ti -1c
+.RI "file \fBHtmlIgnoreExceptIncludeExtension\&.cs\fP"
+.br
+.ti -1c
 .RI "file \fBImageExtension\&.cs\fP"
 .br
 .ti -1c
